13 uzduotis spalvotos lenteles atkurimas
mazi pataisymai

--- a/html uzduotys/13 uzduotis atkurti spalvota lentele/index.html
+++ b/html uzduotys/13 uzduotis atkurti spalvota lentele/index.html
@@ -7,7 +7,7 @@
     <title>dvi isdeliojimas</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body line-height:0;>
     <div class="pirmas"></div>
     <div class="antras"></div>
     <div class="trecias"></div>
@@ -25,9 +25,9 @@
     <div class="pirmas"></div>
     <div class="nr8"></div>
     <div class="penktas"></div>
-    <div class="pirmas"></div>
+    <div class="bnr10"></div>
     <div class="nr9"></div>
-    <div class="penktas"></div>
+    <div class="bnr10"></div>
 
     
 </body>
