--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 4/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div class="pref">saule</div>
-        <div class="pref">zeme</div>
-        <div class="pref">dangus</div>
-        <div class="pref">medis</div>
-        <div class="pref">kelias</div>
-        <div class="pref">lapas</div>
-        <div class="pref">akmuo</div>
-        <div class="pref">griovys</div>
-        <div class="pref">laukas</div>
-        <div class="pref">zole</div>
+    <div class="pref2">
+        <div class="pref">turnip</div>
+        <div class="pref">greens</div>
+        <div class="pref">yarrow</div>
+        <div class="pref">icebean</div>
+        <div class="pref">rutabaga</div>
+        <div class="pref">endline</div>
+        <div class="pref">cauliflower</div>
+        <div class="pref">sea lettuce</div>
+        <div class="pref">kohlrabi</div>
+        <div class="pref">amaranth</div>
     </div>
     
 </body>
