--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6/index.html
@@ -20,6 +20,9 @@
         <div class="content-window"><img class="spider" src="spider1.jfif" alt="spider"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque qui dolorem earum, quos voluptate cupiditate alias laboriosam provident saepe quisquam iste necessitatibus corporis ab doloribus perspiciatis eveniet, debitis est a?</p><div class="wc-botton">click me</div></div>    <div class="content-window2"><img class="spider" src="spider2.jfif" alt="spider2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi error reiciendis magni rerum labore, minima, repudiandae voluptatibus sit quibusdam quidem ipsam impedit. Corrupti praesentium, obcaecati autem tempora pariatur exercitationem sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cum officiis, unde dolorem, maxime, itaque temporibus dolore corporis explicabo fuga voluptas? Rerum ad voluptatum perspiciatis nihil accusamus totam placeat id.</p><div class="wc-botton">click me</div></div>    <div class="content-window"><img class="spider" src="spider3.jfif" alt="spider3"><p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque facere cupiditate magni id adipisci deserunt, culpa corporis tempora nihil, modi sint possimus dignissimos, inventore provident ducimus suscipit reiciendis? Ratione, repudiandae.
         Non earum autem itaque veritatis voluptates eligendi, modi sequi harum. Quia laborum placeat, natus doloremque sequi, totam iure, facere nemo laboriosam provident nihil nesciunt commodi reiciendis nostrum fugit repellendus quod. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus dolores debitis perferendis explicabo consequuntur commodi cupiditate nihil omnis nemo est, unde reiciendis ipsam sed ea repellendus autem perspiciatis non voluptas?</p><div class="wc-botton">click me</div></div>
     </div>
+    <div class="footer">
+        <p>Copyright 2016</p>
+    </div>
 
 </body>
 </html>
