--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="header"><h1>Power grid:Store or homepage</div>
     </h1><div class="meniu">
-        <div class="meniu-mygtukai">home</div>
-        <div class="meniu-mygtukai">about</div>
-        <div class="meniu-mygtukai">blog</div>
-        <div class="meniu-mygtukai">careers</div>
-        <div class="meniu-mygtukai">contact us</div>
+        <div class="meniu-mygtukai"><a class="mlink" href="">home</a></div>
+        <div class="meniu-mygtukai"><a class="mlink" href="">About</a></div>
+        <div class="meniu-mygtukai"><a class="mlink" href="">blog</a></div>
+        <div class="meniu-mygtukai"><a class="mlink" href="">careers</a></div>
+        <div class="meniu-mygtukai"><a class="mlink" href="">contact us</a></div>
     </div>
     <div class="content-wraperis">
-        <div class="content-window"><img class="spider" src="spider1.jfif" alt="spider"><div class="pastraipos-wraperis"><p>text here</p></div><div class="cw-botton">click me</div></div>
-        <div class="content-window2"><img class="spider" src="spider2.jfif" alt="spider2"><div class="pastraipos-wraperis"><p>text here</p></div><div class="cw-botton">click me</div></div>
-        <div class="content-window"><img class="spider" src="spider3.jfif" alt="spider3"><div class="pastraipos-wraperis"><p>text here</p></div><div class="cw-botton">click me</div></div>
+        <div class="content-window"><img class="spider" src="spider1.jfif" alt="spider"><div class="pastraipos-wraperis"><p>text here</p></div><div class="cw-botton"><a class="mlink2" href="">click me</a></div></div>
+        <div class="content-window"><img class="spider" src="spider2.jfif" alt="spider2"><div class="pastraipos-wraperis"><p>text here</p></div><div class="cw-botton"><a class="mlink2" href="">click me</a></div></div>
+        <div class="content-window"><img class="spider" src="spider3.jfif" alt="spider3"><div class="pastraipos-wraperis"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, hic pariatur! Nam, obcaecati quisquam dolorem dicta earum cumque iste ipsam nisi id ea laborum voluptatum sint maxime ex, soluta nesciunt? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid blanditiis ad dolore exercitationem soluta, aspernatur alias reiciendis? Corrupti, est a! Eius commodi hic dicta repellendus voluptatum obcaecati excepturi delectus distinctio.</p></div><div class="cw-botton"><a class="mlink2" href="">click me</a></div></div>
     </div>
     <div class="footer"> <p>Copyright</p>
     </div>
