naujai padarytas su space-between

--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 6 su div iseitimi/index.html
@@ -18,21 +18,18 @@
     </div>
     <div class="content-wraperis">
         <div class="content-window">
-            <div class="img-text-div"><img class="spider" src="spider1.jfif" alt="spider">
-                <div class="pastraipos-wraperis"><p>text here</p></div>
+            <div class="img-text-div"><img class="spider" src="spider1.jfif" alt="spider"><p>text here</p>
             </div>
             <div class="cw-botton"><a class="mlink2" href="">click me</a></div>
         </div>
         <div class="content-window">
-            <div class="img-text-div"><img class="spider" src="spider2.jfif" alt="spider2">
-                <div class="pastraipos-wraperis"><p>text here</p></div>
+            <div class="img-text-div"><img class="spider" src="spider2.jfif" alt="spider2"><p>text here</p>
             </div>
             <div class="cw-botton"><a class="mlink2" href="">click me</a></div>
         </div>
         <div class="content-window">
             <div class="img-text-div"><img class="spider" src="spider3.jfif" alt="spider3">
-                <div class="pastraipos-wraperis"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, hic pariatur! Nam, obcaecati quisquam dolorem dicta earum cumque iste ipsam nisi id ea laborum voluptatum sint maxime ex, soluta nesciunt? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid blanditiis ad dolore exercitationem soluta, aspernatur alias reiciendis? Corrupti, est a! Eius commodi hic dicta repellendus voluptatum obcaecati excepturi delectus distinctio.</p>
-                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, hic pariatur! Nam, obcaecati quisquam dolorem dicta earum cumque iste ipsam nisi id ea laborum voluptatum sint maxime ex, soluta nesciunt? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid blanditiis ad dolore exercitationem soluta, aspernatur alias reiciendis? Corrupti, est a! Eius commodi hic dicta repellendus voluptatum obcaecati excepturi delectus distinctio.</p>
             </div>
             <div class="cw-botton"><a class="mlink2" href="">click me</a>
             </div>
