--- a/web.simmons.edu uzduotys/uzduotis 1/index.html
+++ b/web.simmons.edu uzduotys/uzduotis 1/index.html
@@ -15,7 +15,7 @@
             <div class="pirmas-cw"><P>news</P></div>
             <div class="pirmas-cw"><P>library</P></div>
         </div>
-        <div class="antras-cw">
+        <div class="antras-cw-wrappers">
             <div class="antras-cw"><h1>SIMMONS</h1></div>
             <div class="antras-cw-antras-wrapperis">
                 <div class="antras-cw-pirmas"><h3>BOSTON</h3></div>
@@ -23,8 +23,8 @@
             </div>
         </div>
         <div class="trecias-cw">
-            <div class="trecias-cw">ling</div>
-            <div class="trecias-cw">search</div>
+            <div class="trecias-cw"><p>ling</p></div>
+            <div class="trecias-cw"><p>search</p></div>
         </div>
     </div>
     
