--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 7/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 7/index.html
@@ -20,58 +20,58 @@
     </div>
     <div>
         <div class="dien-wraperis">
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos1">1</div>
-            <div class="dienos1">2</div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos">1</div>
+            <div class="dienos">2</div>
         </div>
         <div class="dien-wraperis">
-            <div class="dienos1">3</div>
-            <div class="dienos1">4</div>
-            <div class="dienos1">5</div>
-            <div class="dienos1">6</div>
-            <div class="dienos1">7</div>
-            <div class="dienos1">8</div>
-            <div class="dienos1">9</div>
+            <div class="dienos">3</div>
+            <div class="dienos">4</div>
+            <div class="dienos">5</div>
+            <div class="dienos">6</div>
+            <div class="dienos">7</div>
+            <div class="dienos">8</div>
+            <div class="dienos">9</div>
         </div>
         <div class="dien-wraperis">
-            <div class="dienos1">10</div>
-            <div class="dienos1">11</div>
-            <div class="dienos1">12</div>
-            <div class="dienos1">13</div>
-            <div class="dienos1">14</div>
-            <div class="dienos1">15</div>
-            <div class="dienos1">16</div>
+            <div class="dienos">10</div>
+            <div class="dienos">11</div>
+            <div class="dienos">12</div>
+            <div class="dienos">13</div>
+            <div class="dienos">14</div>
+            <div class="dienos">15</div>
+            <div class="dienos">16</div>
         </div>
         <div class="dien-wraperis">
-            <div class="dienos1">17</div>
-            <div class="dienos1">18</div>
-            <div class="dienos1">19</div>
-            <div class="dienos1">20</div>
-            <div class="dienos1">21</div>
-            <div class="dienos1">22</div>
-            <div class="dienos1">23</div>
+            <div class="dienos">17</div>
+            <div class="dienos">18</div>
+            <div class="dienos">19</div>
+            <div class="dienos">20</div>
+            <div class="dienos">21</div>
+            <div class="dienos">22</div>
+            <div class="dienos">23</div>
         </div>
         <div class="dien-wraperis">
-            <div class="dienos1">24</div>
-            <div class="dienos1">25</div>
-            <div class="dienos1">26</div>
-            <div class="dienos1">27</div>
-            <div class="dienos1">28</div>
-            <div class="dienos1">29</div>
-            <div class="dienos1">30</div>
+            <div class="dienos">24</div>
+            <div class="dienos">25</div>
+            <div class="dienos">26</div>
+            <div class="dienos">27</div>
+            <div class="dienos">28</div>
+            <div class="dienos">29</div>
+            <div class="dienos">30</div>
         </div>
         <div class="dien-wraperis">
-            <div class="dienos1">31</div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
-            <div class="dienos"></div>
+            <div class="dienos">31</div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
+            <div class="dienos no-day"></div>
         </div>
     </div>
 </body>
