--- a/web.simmons.edu uzduotys/uzduotis 1/index.html
+++ b/web.simmons.edu uzduotys/uzduotis 1/index.html
@@ -23,8 +23,8 @@
             </div>
         </div>
         <div class="trecias-cw">
-            <div class="trecias-cw"><p>ling</p></div>
-            <div class="trecias-cw"><p>search</p></div>
+            <div class="trecias-cw-pirmas"><p>ling</p></div>
+            <div class="trecias-cw-antras"><p>search</p></div>
         </div>
     </div>
     
