--- a/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 8/index.html
+++ b/flex uzdaviniai/papildomi uzdaviniai flex/flex uzduotis 8/index.html
@@ -50,6 +50,20 @@
             <div class="langeliai">g</div>
             <div class="langeliai">e</div>
         </div>
+        <dic class="eilutes">
+            <div class="langeliai">a</div>
+            <div class="langeliai">r</div>
+            <div class="langeliai">t</div>
+            <div class="langeliai">i</div>
+            <div class="langeliai">f</div>
+            <div class="langeliai">i</div>
+            <div class="langeliai green">c</div>
+            <div class="langeliai">i</div>
+            <div class="langeliai">a</div>
+            <div class="langeliai">l</div>
+            <div class="langeliai">l</div>
+            <div class="langeliai">y</div>
+        </dic>
     </div>
     
 </body>
